--- a/healthcare/pubspec.yaml
+++ b/healthcare/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_database: 10.4.1
   firebase_storage: 11.6.9
 
+  curved_navigation_bar: ^1.0.3
   fl_chart: ^0.66.0
   image_picker: ^1.0.7
   intl: ^0.19.0
