--- a/healthcare/pubspec.yaml
+++ b/healthcare/pubspec.yaml
@@ -15,16 +15,17 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   
-  # Firebase dependencies locked to a stable, compatible set to fix native build errors.
+  # Firebase dependencies
   firebase_core: 2.27.0
   firebase_auth: 4.17.8
   cloud_firestore: 4.15.8
   firebase_database: 10.4.1
   firebase_storage: 11.6.9
+  # firebase_app_check: ^0.2.1+17 // Supprimé
 
   curved_navigation_bar: ^1.0.3
-  fl_chart: ^0.66.0
-  image_picker: ^1.0.7
+  fl_chart: ^0.66.2
+  image_picker: ^1.1.2
   intl: any
   provider: ^6.1.1
   syncfusion_flutter_gauges: ^31.2.5
@@ -37,6 +38,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # Ajout de la section assets pour l'illustration
   assets:
     - assets/doctor_illustration.jpg
