--- a/healthcare/pubspec.yaml
+++ b/healthcare/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   cloud_firestore: 4.15.8
   firebase_database: 10.4.1
   firebase_storage: 11.6.9
-  # firebase_app_check: ^0.2.1+17 // Supprimé
 
   curved_navigation_bar: ^1.0.3
   fl_chart: ^0.66.2
@@ -29,6 +28,7 @@ dependencies:
   intl: any
   provider: ^6.1.1
   syncfusion_flutter_gauges: ^31.2.5
+  numberpicker: ^2.1.2 # Ajout du sélecteur de chiffres
 
 dev_dependencies:
   flutter_test:
@@ -39,4 +39,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/doctor_illustration.jpg
+    - assets/
