--- a/healthcare/pubspec.yaml
+++ b/healthcare/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cloud_firestore: 4.15.8
   firebase_database: 10.4.1
   firebase_storage: 11.6.9
+  firebase_app_check: ^0.2.1+17
 
   curved_navigation_bar: ^1.0.3
   fl_chart: ^0.66.2
