--- a/healthcare/pubspec.yaml
+++ b/healthcare/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   intl: any
   provider: ^6.1.1
   syncfusion_flutter_gauges: ^31.2.5
+  geolocator: ^11.0.0
+  
+  # Cartographie OpenSource (Gratuit, pas de clé API requise)
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  url_launcher: ^6.2.4 
 
 dev_dependencies:
   flutter_test:
